feat: validate report date ranges and prevent blank document generation on empty data